fix: vertical align for prefixed icons

--- a/src/components/pd-chip/pd-chip.scss
+++ b/src/components/pd-chip/pd-chip.scss
@@ -2,6 +2,7 @@
 
 :host {
     display: inline-block;
+    vertical-align: bottom;
 }
 
 *,
